--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -5,7 +5,7 @@
   * plugins/generic/remoteChapterGalleys/locale/en_US/locale.xml
   *
   * Copyright (c) 2015 Language Science Press
-  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  * Distributed under the GNU GPL v3. For full terms see the file docs/LICENSE.
   *
   * Localization strings for this plugin.
   *
@@ -15,5 +15,7 @@
 
 	<message key="plugins.generic.remoteChapterGalleys.displayName">Remote Chapter Galleys</message>
 	<message key="plugins.generic.remoteChapterGalleys.description">Adds the option of assigning remote galleys to chapter defintions.</message>
+
+	<message key="plugins.generic.remoteChapterGalleys.remoteURLLabel">Label for the download button.</message>
 	
 </locale>
